# llm-post-training

./: .gitignore  CLEAN_REINSTALL.md  CONTRIBUTING.md  FIX_FORWARD_PASS_CRASH.md  GIT_REMOTE_SETUP.md  INSTALLATION.md  MACOS_COMPLETE_FIX.md  MACOS_FIX.md  MACOS_LIMITATION.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE6_SUMMARY.md  PLATFORM_GUIDE.md  PROJECT_PHASES.md  PYTHON_314_FIX.md  QUICKSTART.md  README.md  SESSION_HANDOFF.md  SETUP.md  TROUBLESHOOTING.md  pyproject.toml
configs/: config.yaml  config_dpo.yaml  config_ppo.yaml  config_reward.yaml
configs/data/: conversation.yaml  custom_image_caption.yaml  custom_preferences.yaml  image_caption.yaml  preference.yaml  prompts.yaml
configs/experiment/: clip_dpo.yaml  clip_image_caption.yaml  clip_image_caption_macos.yaml  dpo_gpt2_hh_rlhf.yaml  dpo_gpt2_synthetic.yaml  llava_dpo.yaml  llava_instruction.yaml  ppo_gpt2_full.yaml  ppo_gpt2_synthetic.yaml  reward_gpt2_hh_rlhf.yaml  reward_gpt2_synthetic.yaml
configs/model/: clip.yaml  gpt2.yaml  llava.yaml  opt-350m.yaml
configs/technique/: dpo.yaml  ppo.yaml  reward_model.yaml  sft.yaml
docs/: ADDING_NEW_MULTIMODAL_MODELS.md  CLOUD_PLATFORMS_GUIDE.md  CODE_REVIEW_MACOS_FIX.md  COLAB_PPO_TRAINING.md  CONFIGURATION_GUIDE.md  CUSTOM_DATA_GUIDE.md  CUSTOM_DATA_IMPLEMENTATION_SUMMARY.md  CUSTOM_DATA_QUICKSTART.md  DPO_CONFIGURATION.md  DPO_THEORY.md  GIT_GUIDE.md  MOBILE_ON_DEVICE_TRAINING.md  MULTIMODAL_MODELS_REFERENCE.md  NEW_MODELS_GUIDE_SUMMARY.md  NOTEBOOK_TEMPLATES_SUMMARY.md  PHASE5_TESTING_GUIDE.md  PLATFORM_COMPATIBILITY.md  PPO_THEORY.md  PYTHON_PRACTICES.md  REWARD_MODELING_CONFIGURATION.md  REWARD_MODELING_THEORY.md  TIED_WEIGHTS_GUIDE.md  TROUBLESHOOTING_REWARD_MODELS.md  VERSION_COMPATIBILITY.md  google_colab_guide.md  known_issues.md  multimodal_training_guide.md
examples/: debug_sft.py  minimal_sft.py  minimal_sft_clean.py  minimal_sft_no_mp.py  minimal_sft_safe.py  test_minimal_no_lora.py  test_progressive.py  test_raw_transformers.py  test_sft.py  test_step_by_step.py  test_version_compat.py
examples/custom_data/: README.md  dpo_preferences.json  prepare_data.py  simple_sft.json
notebooks/: 01_understanding_sft.ipynb  02_reward_modeling.ipynb  02_reward_modeling_colab.ipynb  04_dpo_simplified_rlhf.ipynb  05_ppo_rlhf_deep_dive.ipynb  06_multimodal_training.ipynb  colab_training_template.ipynb  databricks_training_template.py
outputs/dpo/final_model/: adapter_config.json
outputs/ppo_gpt2/critic/: README.md  adapter_config.json
requirements/: base.txt  colab-rlhf.txt  colab.txt  dev.txt  gpu.txt  multimodal.txt  optional.txt  rlhf.txt
scripts/: debug_config.py
scripts/data/: explore_hh_rlhf.py  validate_custom_data.py
scripts/evaluate/: evaluate_multimodal.py
scripts/train/: train_dpo.py  train_multimodal.py  train_multimodal_dpo.py  train_ppo.py  train_reward_model.py  train_sft.py
src/core/dpo/: __init__.py  loss.py  (+2 more)
src/data/: loaders.py
src/models/: base.py  language.py  reward.py  vision_language.py
src/utils/: __init__.py  compat.py  logging.py
tests/: test_multimodal_dpo.py  test_multimodal_pipeline.py
(+22 files in other folders)
