[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-post-training"
version = "0.1.0"
description = "A comprehensive repository for learning and experimenting with LLM post-training techniques"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "rlhf", "dpo", "ppo", "reward-modeling", "post-training", "alignment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0,<2.2.0",
    "transformers>=4.35.0,<4.36.0",  # 4.36+ requires PyTorch 2.4+
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "einops>=0.7.0",
    "rich>=13.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# GPU platforms (Linux/Colab/Cloud) - latest versions, no macOS constraints
gpu = [
    "torch>=2.4.0",
    "transformers>=4.36.0",
]
rlhf = [
    "trl>=0.7.0",
]
multimodal = [
    "Pillow>=10.1.0",
    "torchvision>=0.16.0",
    "clip-score>=0.1.0",
]
experiment = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "hydra-core>=1.3.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
all = [
    "llm-post-training[rlhf,multimodal,experiment,quantization,dev]",
]
all-gpu = [
    "llm-post-training[gpu,rlhf,multimodal,experiment,quantization,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-post-training"
Repository = "https://github.com/yourusername/llm-post-training"
Documentation = "https://github.com/yourusername/llm-post-training/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
